crates/ssa-workflow-derive/tests/ui/unsupported_attribute.stderr
error: unsupported cache_schema attribute
 --> tests/ui/unsupported_attribute.rs:4:16
  |
4 | #[cache_schema(foo)]
  |                ^^^
